terraform/aws/eks/launch_template.tf
resource "aws_launch_template" "my-aws_launch_template" {
  block_device_mappings {
    device_name = "/dev/xvda"

    ebs {
      delete_on_termination = "true"
      iops                  = "0"
      # throughput            = "0"
      volume_size           = "20"
      volume_type           = "gp2"
    }
  }

  default_version         = "1"
  disable_api_termination = "false"

  iam_instance_profile {
    name = aws_iam_instance_profile.my-aws-iam-instance-profile.name
  }

  image_id      = "ami-085b4285663443932"
  instance_type = "t3a.medium"

  metadata_options {
    http_endpoint = "enabled"
    http_put_response_hop_limit = "2"
  }

  name = aws_iam_instance_profile.my-aws-iam-instance-profile.name

  network_interfaces {
    device_index       = "0"
    ipv4_address_count = "0"
    ipv6_address_count = "0"
    network_card_index = "0"
    security_groups    = [aws_security_group.test-sg-eks-cluster.id]
  }

  tags = {
    "eks:cluster-name"   = var.cluster-name
    "eks:nodegroup-name" = var.node-name
  }

  tags_all = {
    "eks:cluster-name"   = var.cluster-name
    "eks:nodegroup-name" = var.node-name
  }

  user_data = "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSIvLyIKCi0tLy8KQ29udGVudC1UeXBlOiB0ZXh0L3gtc2hlbGxzY3JpcHQ7IGNoYXJzZXQ9InVzLWFzY2lpIgojIS9iaW4vYmFzaApzZXQgLWV4CkI2NF9DTFVTVEVSX0NBPUxTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENrMUpTVU12YWtORFFXVmhaMEYzU1VKQlowbENRVVJCVGtKbmEzRm9hMmxIT1hjd1FrRlJjMFpCUkVGV1RWSk5kMFZSV1VSV1VWRkVSWGR3Y21SWFNtd0tZMjAxYkdSSFZucE5RalJZUkZSSmVrMUVZM2ROZWtFMFRWUlJNVTlHYjFoRVZFMTZUVVJaZWsxRVFUUk5WRkV4VDBadmQwWlVSVlJOUWtWSFFUR [...]
}

resource "aws_launch_template" "test-launch-template" {
  block_device_mappings {
    device_name = "/dev/xvda"

    ebs {
      delete_on_termination = "true"
      iops                  = "0"
      volume_size           = "20"
      volume_type           = "gp2"
    }
  }

  default_version         = "1"
  disable_api_termination = "false"
  

  metadata_options {
    http_endpoint = "enabled"
    http_put_response_hop_limit = "2"
  }

  name = "${aws_iam_instance_profile.my-aws-iam-instance-profile.name}-2"

  network_interfaces {
    device_index       = "0"
    ipv4_address_count = "0"
    ipv6_address_count = "0"
    network_card_index = "0"
    security_groups    = [aws_security_group.test-sg-eks-cluster.id]
  }

  tags = {
    "eks:cluster-name"   = var.cluster-name
    "eks:nodegroup-name" = var.node-name
  }

  tags_all = {
    "eks:cluster-name"   = var.cluster-name
    "eks:nodegroup-name" = var.node-name
  }

  user_data = "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSIvLyIKCi0tLy8KQ29udGVudC1UeXBlOiB0ZXh0L3gtc2hlbGxzY3JpcHQ7IGNoYXJzZXQ9InVzLWFzY2lpIgojIS9iaW4vYmFzaApzZXQgLWV4CkI2NF9DTFVTVEVSX0NBPUxTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENrMUpTVU12YWtORFFXVmhaMEYzU1VKQlowbENRVVJCVGtKbmEzRm9hMmxIT1hjd1FrRlJjMFpCUkVGV1RWSk5kMFZSV1VSV1VWRkVSWGR3Y21SWFNtd0tZMjAxYkdSSFZucE5RalJZUkZSSmVrMUVXWGxQVkVGNFRsUlplazVzYjFoRVZFMTZUVVJaZVU1cVFYaE9WRmw2VG14dmQwWlVSVlJOUWtWSFFUR [...]
}
